--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin    : "air" # "default", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "FedeBarabas homepage"
 title_separator          : "-"
 name                     : "Federico M Barabas"
 description              : "Federico M Barabas personal website."
