--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   name             : "Federico M Barabas"
   avatar           : "/assets/images/face.jpg"
   bio              : "physicist + data enthusiast"
-  location         : "Stockholm"
+  location         : "Stockholm, Sweden"
   email            : "fede.barabas@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
