--- a/_config.yml
+++ b/_config.yml
@@ -251,7 +251,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: false
-      comments: # true
-      share: false
+      comments: true
+      share: true
       related: false
       classes: wide
