--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ staticman:
       options:
         format           : # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 reCaptcha:
-  siteKey                :
-  secret                 :
+  siteKey                :"6Ler208UAAAAAO-pE8g5IDEGD-i0eF6iReihVB1z"
+  secret                 :"6Ler208UAAAAAFkPcx43nx-qtHgo6HXo7ozSff92"
 atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : # true, false (default)
