--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ staticman:
       options:
         format           : # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 reCaptcha:
-  siteKey                :"6Ler208UAAAAAO-pE8g5IDEGD-i0eF6iReihVB1z"
-  secret                 :"6Ler208UAAAAAFkPcx43nx-qtHgo6HXo7ozSff92"
+  siteKey                : "6Ler208UAAAAAO-pE8g5IDEGD-i0eF6iReihVB1z"
+  secret                 : "6Ler208UAAAAAFkPcx43nx-qtHgo6HXo7ozSff92"
 atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : # true, false (default)
@@ -107,7 +107,8 @@ author:
   pinterest        :
   soundcloud       :
   stackoverflow    : "2834480/federico"
-  googlescholar    : "https://scholar.google.se/citations?user=Xq4FPRAAAAAJ&hl=en"
+  googlescholar    : "Xq4FPRAAAAAJ&hl=en"
+  spotify          : "fedebarabas"
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
   twitter          :
