--- a/staticman.yml
+++ b/staticman.yml
@@ -96,9 +96,9 @@ comments:
 
   # reCaptcha
   # Register your domain at https://www.google.com/recaptcha/ and choose reCAPTCHA V2
-  reCaptcha:
-    enabled: true
-    siteKey: "6Ler208UAAAAAO-pE8g5IDEGD-i0eF6iReihVB1z"
-    # Encrypt reCaptcha secret key using Staticman /encrypt endpoint
-    # For more information, https://staticman.net/docs/encryption
-    secret: "6Ler208UAAAAAFkPcx43nx-qtHgo6HXo7ozSff92"
+  # reCaptcha:
+  #   enabled: true
+  #   siteKey: "6Ler208UAAAAAO-pE8g5IDEGD-i0eF6iReihVB1z"
+  #   # Encrypt reCaptcha secret key using Staticman /encrypt endpoint
+  #   # For more information, https://staticman.net/docs/encryption
+  #   secret: "6Ler208UAAAAAFkPcx43nx-qtHgo6HXo7ozSff92"
