--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   spotify          : "fedebarabas"
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          :
+  twitter          : "BarabasFederico"
   vine             :
   weibo            :
   xing             :
