teaser link fix

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : "BarabasFederico"
+  username               : "FedeBarabas"
 facebook:
   username               :
   app_id                 :
